# Cgl

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CglClique.cpp  CglCliqueHelper.cpp  CglCutGenerator.cpp  CglDuplicateRow.cpp  CglFlowCover.cpp  CglFlowCoverTest.cpp  CglGomory.cpp  CglGomoryTest.cpp  CglKnapsackCover.cpp  CglKnapsackCoverTest.cpp  CglLiftAndProject.cpp  CglMessage.cpp  CglMixedIntegerRounding.cpp  CglMixedIntegerRounding2.cpp  CglOddHole.cpp  CglOddHoleTest.cpp  CglPreProcess.cpp  CglProbing.cpp  CglProbingTest.cpp  CglProcess.cpp  CglRedSplit.cpp  CglSimpleRounding.cpp  CglSimpleRoundingTest.cpp  CglTwomir.cpp  Dependencies  Externals  INSTALL  Makefile  Makefile.Cgl  Makefile.am  Makefile.in  README.md  WARNING  appveyor.yml  cgl-uninstalled.pc.in  (+4 more)
Cgl/: AUTHORS  CMakeLists.txt  Dependencies  INSTALL  Makefile.am  Makefile.in  README  cgl-uninstalled.pc.in  cgl.pc.in  config.h.cmake.in  configure  configure.ac
Cgl/MSVisualStudio/v17/: Cgl.sln  CglTest.cmd
Cgl/MSVisualStudio/v9alt/: libCglAllDifferent.vcproj  libCglBase.vcproj  libCglClique.vcproj  libCglDuplicateRow.vcproj  libCglFlowCover.vcproj  libCglKnapsackCover.vcproj  libCglLandP.vcproj  libCglLiftAndProject.vcproj  libCglProbing.vcproj  libCglRedSplit.vcproj  libCglSimpleRounding.vcproj
Cgl/examples/: Makefile.in  cgl1.cpp  cgl2.cpp  cgl_data_test.cpp
Cgl/inc/: config_cgl.h.in
Cgl/src/: CglAllDifferent.cpp  CglAllDifferent.hpp  CglClique.hpp  CglCliqueHelper.cpp  CglConfig.h  CglCutGenerator.cpp  CglCutGenerator.hpp  CglData.cpp  CglData.hpp  CglDuplicateRow.hpp  CglFlowCoverTest.cpp  CglGomoryTest.cpp  CglKnapsackCover.cpp  CglKnapsackCover.hpp  CglLiftAndProject.hpp  CglMessage.cpp  CglMessage.hpp  CglParam.cpp  CglParam.hpp  CglPreProcess.cpp  CglProbing.cpp  CglProbingTest.cpp  CglStored.cpp  CglStored.hpp  CglTreeInfo.cpp  CglTreeInfo.hpp  CglTwomir.cpp  Makefile.am  Makefile.in  config_cgl_default.h
Cgl/src/CglAllDifferent/: CglAllDifferent.cpp  CglAllDifferent.hpp  Makefile.am  Makefile.in
Cgl/src/CglBKClique/: CglBKClique.hpp  Makefile.am  Makefile.in
Cgl/src/CglClique/: CglClique.cpp  CglClique.hpp  CglCliqueHelper.cpp  CglCliqueTest.cpp  Makefile.am  Makefile.in
Cgl/src/CglCliqueMerging/: CglCliqueMerging.cpp  CglCliqueMerging.hpp  Makefile.am  Makefile.in
Cgl/src/CglCommon/: CglCutGenerator.cpp  CglParam.hpp  CglTreeInfo.cpp  CglTreeInfo.hpp  Makefile.am  Makefile.in  config.h.in  config_cgl_default.h  config_default.h
Cgl/src/CglDuplicateRow/: CglDuplicateRow.cpp  CglDuplicateRow.hpp  Makefile.am  (+1 more)
Cgl/test/: CMakeLists.txt  CglSimpleRoundingTest.cpp  CglTwomirTest.cpp  Makefile.am  Makefile.in  unitTest.cpp
src/: CMakeLists.txt  CglConfig.h  CglCutGenerator.cpp  CglCutGenerator.hpp  CglGeneralisedClique.hpp  CglMessage.cpp  CglMessage.hpp  CglParam.cpp  CglParam.hpp  CglStored.cpp  CglStored.hpp  CglTreeInfo.cpp  CglTreeInfo.hpp  CglTreeProbingInfo.cpp  CglTreeProbingInfo.hpp  Makefile.am  Makefile.in  config.h.cmake.in
src/CglAllDifferent/: CglAllDifferent.cpp  Makefile.am  Makefile.in
src/CglBKClique/: CglBKClique.cpp  CglBKClique.hpp  Makefile.am  Makefile.in
src/CglClique/: CglClique.cpp  CglClique.hpp  CglCliqueHelper.cpp  CglCliqueTest.cpp  Makefile.am  Makefile.in
src/CglCliqueMerging/: CglCliqueMerging.hpp  Makefile.am
src/CglCliqueStrengthening/: CglCliqueStrengthening.cpp  CglCliqueStrengthening.hpp  Makefile.am  Makefile.in
src/CglCommon/: CglConfig.h  CglCutGenerator.cpp  CglCutGenerator.hpp  CglMessage.cpp  CglMessage.hpp  CglStored.hpp  CglTreeInfo.cpp  CglTreeInfo.hpp  Makefile.am  Makefile.in  config.h.in  config_cgl.h.in  config_cgl_default.h  config_default.h
src/CglDuplicateRow/: CglDuplicateRow.cpp  CglDuplicateRow.hpp  Makefile.am  Makefile.in
src/CglFlowCover/: CglFlowCover.cpp  CglFlowCover.hpp  Makefile.am  Makefile.in
src/CglGMI/: CglGMI.cpp  CglGMI.hpp  CglGMIParam.cpp  Makefile.am  Makefile.in
src/CglGomory/: CglGomory.cpp  CglGomory.hpp  Makefile.am  Makefile.in
src/CglKnapsackCover/: CglKnapsackCover.cpp  CglKnapsackCover.hpp  CglKnapsackCoverTest.cpp  Makefile.am  Makefile.in
src/CglLandP/: CglLandP.cpp  CglLandP.hpp  CglLandPMessages.cpp  CglLandPMessages.hpp  CglLandPSimplex.cpp  CglLandPSimplex.hpp  CglLandPTabRow.hpp  CglLandPTest.cpp  CglLandPUtils.cpp  CglLandPUtils.hpp  CglLandPValidator.cpp  CglLandPValidator.hpp  Makefile.am  Makefile.in
src/CglLiftAndProject/: Makefile.am  Makefile.in
src/CglMixedIntegerRounding/: CglMixedIntegerRounding.cpp  CglMixedIntegerRoundingTest.cpp  Makefile.am  Makefile.in
src/CglMixedIntegerRounding2/: CglMixedIntegerRounding2.cpp  CglMixedIntegerRounding2.hpp  Makefile.am  Makefile.in
src/CglOddHole/: CglOddHole.cpp  CglOddHole.hpp  CglOddHoleTest.cpp  Makefile.am  Makefile.in
src/CglOddHoleWC/: CglOddHoleWC.cpp  oddhs.cpp  oddhs.h  spaths.h
src/CglOddWheel/: CglOddWheel.cpp  CglOddWheel.hpp  Makefile.am  Makefile.in
src/CglPhic/: CglPhic.hpp  CglPhicBase.cpp  CglPhicPropagate.cpp  Makefile.am  Makefile.in  bonsai_phic.c
src/CglPreProcess/: CglPreProcess.cpp  CglPreProcess.hpp  Makefile.am  Makefile.in
src/CglProbing/: CglImplication.cpp  CglImplication.hpp  CglProbing.cpp  CglProbing.hpp  CglProbingDebug.cpp  CglProbingDebug.hpp  CglProbingProbe.cpp  CglProbingProbeClique.cpp  CglProbingProbeSlack.cpp  CglProbingRowCut.cpp  CglProbingRowCut.hpp  CglProbingSnapshot.cpp  CglProbingTest.cpp  CglProbingTighten.cpp  Makefile.am  Makefile.in
src/CglRedSplit/: CglRedSplit.cpp  CglRedSplit.hpp  CglRedSplitParam.hpp  Makefile.am  Makefile.in
src/CglRedSplit2/: CglRedSplit2.cpp  Makefile.am  Makefile.in
src/CglResidualCapacity/: CglResidualCapacity.cpp  Makefile.am  Makefile.in
src/CglSimpleRounding/: CglSimpleRounding.cpp  CglSimpleRounding.hpp  Makefile.am  Makefile.in
src/CglTwomir/: CglTwomir.cpp  CglTwomir.hpp  CglTwomirTest.cpp  Makefile.am  Makefile.in
src/CglZeroHalf/: Cgl012cut.cpp  Cgl012cut.hpp  CglZeroHalf.cpp  CglZeroHalf.hpp  CglZeroHalfTest.cpp  Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  unitTest.cpp
(+2296 files in other folders)
